remove website development

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MTCC(Mishra Transport Cargo & Carriers) Logistic Website Development</title>
+    <title>MTCC(Mishra Transport Cargo & Carriers) Logistic</title>
     <meta name="description" content="MTCC(Mishra Transport Cargo & Carriers)  Logistic offers reliable transport and logistics services across India. Road transport, cargo freight, warehousing, and custom logistics solutions." />
   </head>
   <body>
